// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Experience visual regression matrix (#65) > branch-narrow-dark-motion 1`] = `
<div
  class="dark bg-slate-950 p-4"
  data-motion="full"
  data-viewport="narrow"
  style="width: 390px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_h_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_h_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-indigo-700 text-white"
            >
              •
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  current
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_i_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_i_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="57"
              >
                57% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                57% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_j_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_j_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Locked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Locked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Alternate route selected
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          You chose to collect another measurement before repairing the relay.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > branch-wide-light-reduced 1`] = `
<div
  class="bg-white p-4"
  data-motion="reduced"
  data-viewport="wide"
  style="width: 1280px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_e_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_e_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-indigo-700 text-white"
            >
              •
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  current
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_f_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_f_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="57"
              >
                57% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                57% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_g_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_g_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Locked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Locked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Alternate route selected
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          You chose to collect another measurement before repairing the relay.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > recoverable-narrow-light-motion 1`] = `
<div
  class="bg-white p-4"
  data-motion="full"
  data-viewport="narrow"
  style="width: 390px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_a_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_a_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-indigo-700 text-white"
            >
              •
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  current
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_b_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_b_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="42"
              >
                42% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                42% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_c_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_c_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Locked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Locked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Reading needs another test
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          The signal remains noisy. Adjust the antenna and try again.
        </div>
      </section>
      <section
        aria-labelledby="_r_d_"
        class="rounded-xl border border-red-400 bg-red-50 p-4 dark:border-red-700 dark:bg-red-950/40"
        role="alert"
      >
        <h2
          class="font-bold outline-none"
          id="_r_d_"
          tabindex="-1"
        >
          Something needs attention
        </h2>
        <div
          class="mt-1"
        >
          The saved reading could not be restored. Try again from the checkpoint.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > recoverable-wide-dark-reduced 1`] = `
<div
  class="dark bg-slate-950 p-4"
  data-motion="reduced"
  data-viewport="wide"
  style="width: 1280px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_6_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_6_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-indigo-700 text-white"
            >
              •
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  current
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_7_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_7_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="42"
              >
                42% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                42% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_8_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_8_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Locked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Locked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Reading needs another test
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          The signal remains noisy. Adjust the antenna and try again.
        </div>
      </section>
      <section
        aria-labelledby="_r_9_"
        class="rounded-xl border border-red-400 bg-red-50 p-4 dark:border-red-700 dark:bg-red-950/40"
        role="alert"
      >
        <h2
          class="font-bold outline-none"
          id="_r_9_"
          tabindex="-1"
        >
          Something needs attention
        </h2>
        <div
          class="mt-1"
        >
          The saved reading could not be restored. Try again from the checkpoint.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > success-narrow-dark-reduced 1`] = `
<div
  class="dark bg-slate-950 p-4"
  data-motion="reduced"
  data-viewport="narrow"
  style="width: 390px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_3_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_3_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_4_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_4_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="82"
              >
                82% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                82% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_5_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_5_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Receiver calibrated
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          The signal is now stable.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > success-wide-light-motion 1`] = `
<div
  class="bg-white p-4"
  data-motion="full"
  data-viewport="wide"
  style="width: 1280px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_0_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_0_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_1_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_1_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="82"
              >
                82% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                82% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_2_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_2_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Receiver calibrated
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          The signal is now stable.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > terminal-narrow-light-reduced 1`] = `
<div
  class="bg-white p-4"
  data-motion="reduced"
  data-viewport="narrow"
  style="width: 390px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_n_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_n_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_o_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_o_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="100"
              >
                100% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                100% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_p_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_p_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Mission complete
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          The relay is transmitting again, and the station can receive storm data.
        </div>
      </section>
    </div>
  </section>
</div>
`;

exports[`Experience visual regression matrix (#65) > terminal-wide-dark-motion 1`] = `
<div
  class="dark bg-slate-950 p-4"
  data-motion="full"
  data-viewport="wide"
  style="width: 1280px;"
>
  <section
    aria-label="Experience scene"
    class="mx-auto w-full max-w-5xl rounded-2xl border border-slate-200 bg-surface p-4 shadow-sm sm:p-6 dark:border-slate-700 dark:bg-surface-dark"
  >
    <p
      aria-hidden="true"
      class="mb-4 text-xs font-semibold uppercase tracking-[0.18em] text-indigo-700 dark:text-indigo-300"
      data-tts-exclude="true"
    >
      Visual regression fixture
    </p>
    <div
      class="space-y-6"
      data-testid="scene-shell-readable"
    >
      <section
        aria-labelledby="_r_k_"
        class="rounded-xl border border-indigo-200 bg-indigo-50 p-4 dark:border-indigo-800 dark:bg-indigo-950/30"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_k_"
        >
          Mission objectives
        </h2>
        <ol
          class="mt-3 space-y-3"
        >
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Test the receiver
              </p>
            </div>
          </li>
          <li
            class="flex gap-3"
          >
            <span
              aria-hidden="true"
              class="mt-0.5 inline-flex h-6 min-w-6 items-center justify-center rounded-full px-1 text-xs font-bold bg-emerald-700 text-white"
            >
              ✓
            </span>
            <div>
              <p
                class="font-semibold text-slate-950 dark:text-white"
              >
                <span
                  class="sr-only"
                >
                  complete
                  : 
                </span>
                Repair the relay
              </p>
            </div>
          </li>
        </ol>
      </section>
      <aside
        aria-labelledby="_r_l_"
        class="rounded-xl bg-slate-100 p-4 dark:bg-slate-800"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_l_"
        >
          World status
        </h2>
        <dl
          class="mt-3 space-y-4"
        >
          <div>
            <dt
              class="font-semibold text-slate-900 dark:text-white"
            >
              Signal strength
            </dt>
            <dd
              class="mt-1"
            >
              <progress
                aria-label="Signal strength"
                class="h-3 w-full accent-indigo-700"
                max="100"
                value="100"
              >
                100% of 100%
              </progress>
              <span
                class="mt-1 block text-sm text-slate-700 dark:text-slate-200"
              >
                100% of 100%
              </span>
            </dd>
          </div>
        </dl>
      </aside>
      <section
        aria-labelledby="_r_m_"
        class="rounded-xl border border-slate-300 p-4 dark:border-slate-600"
      >
        <h2
          class="text-lg font-bold text-slate-950 dark:text-white"
          id="_r_m_"
        >
          Tools and capabilities
        </h2>
        <ul
          class="mt-3 space-y-2"
        >
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Field meter
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Measures relay signal strength.
            </p>
          </li>
          <li>
            <p
              class="font-semibold text-slate-900 dark:text-white"
            >
              <span
                class="sr-only"
              >
                Unlocked: 
              </span>
              Repair kit
               
              <span
                aria-hidden="true"
              >
                (
                Unlocked
                )
              </span>
            </p>
            <p
              class="text-sm text-slate-700 dark:text-slate-200"
            >
              Enables a connector repair.
            </p>
          </li>
        </ul>
      </section>
      <section
        aria-label="Mission checkpoint"
        class="rounded-xl border border-amber-300 bg-amber-50 p-4 dark:border-amber-700 dark:bg-amber-950/30"
      >
        <h2
          class="font-bold text-slate-950 dark:text-white"
        >
          Checkpoint saved
        </h2>
        <p
          class="mt-1 text-slate-700 dark:text-slate-200"
        >
          Receiver test complete
        </p>
        <button
          class="mt-3 rounded-md bg-amber-700 px-3 py-2 font-semibold text-white"
          type="button"
        >
          Return to checkpoint
        </button>
      </section>
      <section
        class="rounded-xl border border-emerald-300 bg-emerald-50 p-4 dark:border-emerald-700 dark:bg-emerald-950/40"
      >
        <h2
          class="text-lg font-bold outline-none text-slate-950 dark:text-white"
          tabindex="-1"
        >
          Mission complete
        </h2>
        <div
          class="mt-1 text-slate-800 dark:text-slate-100"
        >
          The relay is transmitting again, and the station can receive storm data.
        </div>
      </section>
    </div>
  </section>
</div>
`;
